CSS-594:SPIKE: Explore Ranger integration for AuthZ and Auditing -Incremental  Changes 2: Added Opensearch plugin support in other modules.